...
                      thumbShape:
                          const RoundSliderThumbShape(enabledThumbRadius: 6),
                      overlayShape:
                          const RoundSliderOverlayShape(overlayRadius: 12),
                    ),
                    child: Slider(
                      key: const ValueKey('volume-slider'),
                      value: settings.volume,
                      mouseCursor: SystemMouseCursors.click,
                      onChanged: (v) {
                        ref.read(settingsProvider.notifier).setVolume(v);
                        ref.read(playbackProvider.notifier).setVolume(v);
                      },
...
